--- a/project 0/README.me
+++ b/project 0/README.me
@@ -1,56 +1,53 @@
-Google Search Front-End
-Descrição
-Este projeto é parte do Project 0 do curso CS50 Web Programming with Python and JavaScript da Universidade de Harvard. A tarefa é criar um front-end para o mecanismo de pesquisa do Google, incluindo a Pesquisa do Google, Pesquisa de Imagens do Google e Pesquisa Avançada do Google.
+## Google Search Front-End ##
+📄 Descrição
+Este projeto faz parte do Project 0 do curso CS50 Web Programming with Python and JavaScript da Universidade de Harvard. O objetivo é criar um front-end para a Pesquisa do Google, Pesquisa de Imagens e Pesquisa Avançada.
 
-O objetivo do projeto é aplicar conceitos de HTML e CSS, criando um site responsivo que simule o front-end de pesquisa do Google.
+Este projeto utiliza HTML e CSS para simular o design do Google, permitindo aos usuários realizar pesquisas diretamente no Google usando uma interface personalizada.
 
-Funcionalidades
+🚀 Funcionalidades
 Página Principal (index.html):
 
-Inclui um campo de pesquisa para realizar uma pesquisa normal no Google.
-Dois botões: "Pesquisa Google" e "Estou com sorte", onde:
-"Pesquisa Google" leva o usuário à página de resultados de pesquisa.
-"Estou com sorte" redireciona diretamente para o primeiro resultado da pesquisa.
-Links no topo da página para:
-Pesquisa de Imagens do Google.
-Pesquisa Avançada do Google.
+Um campo de pesquisa para realizar uma busca normal no Google.
+Dois botões:
+"Pesquisa Google": Leva o usuário aos resultados da pesquisa.
+"Estou com sorte": Redireciona o usuário diretamente para o primeiro resultado da pesquisa.
+Links para:
+Pesquisa de Imagens.
+Pesquisa Avançada.
 Pesquisa de Imagens (images.html):
 
-Campo de pesquisa dedicado à pesquisa de imagens no Google.
-Link no canto superior direito para retornar à página de pesquisa principal.
+Um campo de pesquisa dedicado à busca de imagens no Google.
+Link para retornar à página principal.
 Pesquisa Avançada (advanced.html):
 
-Quatro campos de entrada para critérios de pesquisa avançada:
-Todas estas palavras.
-Esta palavra ou frase exata.
-Qualquer uma destas palavras.
-Nenhuma destas palavras.
-Um botão "Pesquisa Avançada" que executa a pesquisa baseada nos critérios fornecidos.
-O botão "Pesquisa Avançada" é estilizado para se assemelhar ao estilo do Google (azul com texto branco).
-Como Usar
+Quatro campos de pesquisa, permitindo que o usuário:
+Busque páginas com todas as palavras específicas.
+Busque páginas com uma frase exata.
+Busque páginas com qualquer uma das palavras fornecidas.
+Exclua páginas que contenham palavras específicas.
+O botão de "Pesquisa Avançada" é estilizado para seguir a estética do Google (botão azul com texto branco).
+🛠️ Como Usar
 Clone o repositório:
 
 bash
 Copy code
 git clone https://github.com/seu-usuario/project0-google-search.git
-Abra o arquivo index.html em um navegador para testar a página principal e realizar pesquisas no Google.
+Abra o arquivo index.html em um navegador:
 
-Navegue para as outras páginas:
-
-images.html para pesquisa de imagens.
-advanced.html para realizar uma pesquisa avançada.
-Tecnologias Utilizadas
-HTML5: Estruturação do site e criação de formulários.
-CSS3: Estilização das páginas para se assemelhar ao design do Google.
-Google Search GET Parameters: Utilização de parâmetros GET para enviar consultas ao Google e realizar pesquisas.
-Estrutura de Arquivos
+Para testar a página principal e realizar pesquisas no Google.
+Navegue para as outras páginas: images.html e advanced.html para testar as outras funcionalidades.
+💻 Tecnologias Utilizadas
+HTML5: Estrutura do site e criação de formulários de pesquisa.
+CSS3: Estilização das páginas e alinhamento responsivo dos elementos.
+Parâmetros GET do Google Search: Utilizados para enviar consultas de pesquisa diretamente para o Google.
+📂 Estrutura de Arquivos
 bash
 Copy code
-├── index.html        # Página principal da Pesquisa Google
-├── images.html       # Página da Pesquisa de Imagens
+├── index.html        # Página principal (Pesquisa Google)
+├── images.html       # Página de Pesquisa de Imagens
 ├── advanced.html     # Página de Pesquisa Avançada
 ├── README.md         # Descrição do projeto
 └── css/
-    └── styles.css    # Estilos CSS para o projeto
-Licença
-Este projeto foi desenvolvido como parte do curso CS50 Web Programming with Python and JavaScript. Ele é open-source e pode ser usado e modificado livremente para fins educacionais.
+    └── styles.css    # Estilos customizados para o site
+📝 Licença
+Este projeto foi desenvolvido como parte do curso CS50 Web Programming with Python and JavaScript e pode ser usado livremente para fins educacionais.
