--- a/project 0/README.me
+++ b/project 0/README.me
@@ -1,4 +1,4 @@
-## Google Search Front-End ##
+Google Search Front-End
 📄 Descrição
 Este projeto faz parte do Project 0 do curso CS50 Web Programming with Python and JavaScript da Universidade de Harvard. O objetivo é criar um front-end para a Pesquisa do Google, Pesquisa de Imagens e Pesquisa Avançada.
 
@@ -26,6 +26,7 @@ Busque páginas com uma frase exata.
 Busque páginas com qualquer uma das palavras fornecidas.
 Exclua páginas que contenham palavras específicas.
 O botão de "Pesquisa Avançada" é estilizado para seguir a estética do Google (botão azul com texto branco).
+
 🛠️ Como Usar
 Clone o repositório:
 
@@ -36,10 +37,12 @@ Abra o arquivo index.html em um navegador:
 
 Para testar a página principal e realizar pesquisas no Google.
 Navegue para as outras páginas: images.html e advanced.html para testar as outras funcionalidades.
+
 💻 Tecnologias Utilizadas
 HTML5: Estrutura do site e criação de formulários de pesquisa.
 CSS3: Estilização das páginas e alinhamento responsivo dos elementos.
 Parâmetros GET do Google Search: Utilizados para enviar consultas de pesquisa diretamente para o Google.
+
 📂 Estrutura de Arquivos
 bash
 Copy code
@@ -49,5 +52,6 @@ Copy code
 ├── README.md         # Descrição do projeto
 └── css/
     └── styles.css    # Estilos customizados para o site
+
 📝 Licença
 Este projeto foi desenvolvido como parte do curso CS50 Web Programming with Python and JavaScript e pode ser usado livremente para fins educacionais.
